# irplaygroundthingy

./: CMakeLists.txt
programs/: bf.cpp  minij.cpp  old_test.cpp  struct_test.cpp
src/: aarch64.cpp  aarch64.h  coff.cpp  general.h  internal.h  ir.h  linker_object.cpp  linker_object.h  macho.cpp  main.cpp  opt.cpp  opt.h  print_ir.cpp  print_ir.h  x64.cpp  x64.h
tests/: glfw.j  simple.j
